[package]
name = "utilities"
version = "0.1.0"
authors = ["Collins Huff <collinsrhuffiii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
rtnetlink = "0.3.0"
anyhow = "1.0.32"

[dependencies.tokio]
version = "0.2.25"
features =  ["full"]
